# Pinny

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: update-formula.yml
Formula/: pinny.rb
src/pinny/: __main__.py  app.py  default_locations.json
tests/: test_pinny.py
